@@ -23,7 +23,7 @@ from tesliper import writer
 ############################
 
 __author__ = "Michał M. Więcław"
-__version__ = "0.6.1"
+__version__ = "0.6.2"
     
     
 ##################
